login user y getCount
