# src/routes/userRoutes.js
@@ -3,12 +3,16 @@ const router = express.Router();
 const { createUser,
     getUsers,
     getUser,
+    getUserCount,
     updateUser,
-    deleteUser} = require('../controllers/usuarioController');
+    deleteUser,
+    login} = require('../controllers/usuarioController');
 
 router.post('/', createUser);
 router.get('/', getUsers);
 router.get('/:id', getUser);
+router.get('/get/count', getUserCount);
+router.post('/login', login);
 router.put('/:id', updateUser);
 router.delete('/:id', deleteUser);
 
